Login and Logout

--- a/templates/list.html
+++ b/templates/list.html
@@ -68,18 +68,18 @@
         .btn-sm {
             font-size: 14px;
         }
-		
-	
-		
+
     </style>
     <title>To Do App</title>
 </head>
 <body>
+    <div>
+        <nav class="col-10 mx-auto navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand" href="#">To Do App</a>
 
-    <div class="container">
-        <div class="col-7 mx-auto">
-            <h1>To Do App</h1>
-        </div>
+            <a type="button" href="logout" class="btn btn-light ml-auto">Logout</a>
+
+        </nav>
     </div>
 
     <div class="container">
