enahance the design

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,4 +1,3 @@
-
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -7,21 +6,77 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <title>Signup</title>
+    <style>
+        body {
+            background-color: #f8f9fa; /* Light gray background */
+            font-family: 'Arial', sans-serif;
+        }
+
+        .navbar {
+            background-color: #343a40; /* Dark background color */
+            color: #fff; /* White text */
+        }
+
+        .navbar-brand {
+            font-weight: bold;
+        }
+
+        .navbar-light .btn-light {
+            background-color: #343a40; /* Dark background color */
+            color: #fff; /* White text */
+        }
+
+        .container-form {
+            margin-top: 30px;
+        }
+
+        h2 {
+            color: #343a40; /* Dark background color */
+        }
+
+        form {
+            background-color: #ffffff; /* White */
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            transition: box-shadow 0.3s;
+        }
+
+        form:hover {
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+        }
+
+        .btn-primary {
+            background-color: #343a40; /* Dark background color */
+            color: #fff; /* White text */
+            border: none;
+            transition: background-color 0.3s;
+        }
+
+        .btn-primary:hover {
+            background-color: #1d2124; /* Darker background color on hover */
+        }
+    </style>
 </head>
 <body>
-<div class="container col-md-4">
-    <div >
-        <h2 class="text-center mb-3">Signup</h2>
-
-        <form method="POST" novalidate>
-            {% csrf_token %}
-            {% include 'includes/form.html' %}
-
-            <div class="mb-3">
-                <button type="submit" class="btn btn-primary">Create New User</button>
-            </div>
-        </form>
+    <div>
+        <nav class="col-10 mx-auto navbar navbar-expand-lg navbar-dark">
+            <a class="navbar-brand" href="#">To Do App</a>
+            <a type="button" href="{% url 'login'%}" class="btn btn-light ml-auto">Login</a>
+        </nav>
     </div>
-</div>
-    </body>
+
+    <div class="container col-md-4">
+        <div>
+            <h2 class="text-center mb-3">Signup</h2>
+            <form method="POST" novalidate>
+                {% csrf_token %}
+                {% include 'includes/form.html' %}
+                <div class="mb-3">
+                    <button type="submit" class="btn btn-primary">Create New User</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</body>
 </html>
